apps/jupyterhub/envs/dev/network_policy_package_repos.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-jupyterhub-to-package-repos
  namespace: jupyterhub
spec:
  description: "Allow JupyterHub pods to access CRAN and PyPI package repositories"
  endpointSelector:
    matchLabels:
      app: jupyterhub
      "app.kubernetes.io/component": singleuser-server
  egress:
    # Allow access to PyPI and CRAN
    - toFQDNs:
        matchName: "cran.r-project.org"
        matchPattern: "*.pypi.org"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # Allow DNS resolution
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
